--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
   </div> -->
   </br>
 	  <div class="text-center">
-	  <a href="https://www.instagram.com/aprilandytreats" target="_blank" style="font-size:38px;color:red"><i class="fa fa-instagram" aria-hidden="true" ></i></a>
+	  <a href="https://www.instagram.com/thedrowninglessons/" target="_blank" style="font-size:38px;color:red"><i class="fa fa-instagram" aria-hidden="true" ></i></a>
 	  </div>
 	  
 	  
